# candle

./: 404.html  Cargo.toml  error_manage.html  index.html  print.html  searchindex.js
.cargo/: config.toml
candle-core/: Cargo.toml
candle-core/src/: backend.rs  convert.rs  custom_op.rs  device.rs  display.rs  dtype.rs  dummy_cuda_backend.rs  dummy_gcu_backend.rs  dummy_metal_backend.rs  error.rs  gcu_backend.rs  inference.rs  lib.rs  npy.rs  offloadable.rs  safetensors.rs  shape.rs  sort.rs  tensor.rs  tensor_cat.rs  variable.rs
candle-core/src/cpu/: kernels.rs
candle-core/src/cpu_backend/: mod.rs  utils.rs
candle-core/src/cuda_backend/: cudnn.rs  device.rs  mod.rs
candle-core/src/metal_backend/: device.rs  mod.rs
candle-core/src/quantized/: cuda.rs  dummy_cuda.rs  dummy_gcu.rs  dummy_metal.rs  ggml_file.rs  gguf_file.rs  k_quants.rs  metal.rs  mod.rs
candle-core/tests/: tensor_tests.rs
candle-examples/: Cargo.toml  build.rs
candle-flash-attn/: Cargo.toml  build.rs
candle-flash-attn/kernels/: flash_api.cu  static_switch.h
candle-flash-attn/src/: lib.rs
candle-kernels/: Cargo.toml  build.rs
candle-kernels/src/: affine.cu  binary.cu  binary_op_macros.cuh  cast.cu  compatibility.cuh  cuda_utils.cuh  quantized.cu  reduce.cu  sort.cu  unary.cu
candle-metal-kernels/src/: lib.rs
candle-nn/: Cargo.toml
candle-nn/src/: layer_norm.rs  lib.rs  ops.rs  rotary_emb.rs  var_builder.rs
candle-pyo3/src/: lib.rs
candle-transformers/src/models/: chatglm.rs  gemma.rs  glm4.rs  granite.rs  llama.rs  mistral.rs  mixformer.rs  phi.rs  phi3.rs  qwen2.rs  stable_lm.rs  yi.rs
guide/: cheatsheet.html  hello_world.html  installation.html
inference/: hub.html  inference.html
training/: mnist.html  simplified.html  training.html
