[package]
name = "candle-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
accelerate-src = { workspace = true, optional = true }
byteorder = { workspace = true }
candle-kernels = { workspace = true, optional = true }
candle-metal-kernels = { workspace = true, optional = true }
metal = { workspace = true, optional = true }
cudarc = { workspace = true, optional = true }
gemm = { workspace = true }
half = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
memmap2 = { workspace = true }
num-traits = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
safetensors = { workspace = true }
thiserror = { workspace = true }
ug-metal = { workspace = true, optional = true }
yoke = { workspace = true }
zip = { workspace = true }

ubridge = { git = "https://github.com/EnflameTechnology/Ubridge.git", version = "0.1.0", optional = true, rev = "6a99f9c" }
uhal = { git = "https://github.com/EnflameTechnology/UHHI.git", version = "0.1.0", optional = true, rev = "0980208" }
cust_core = { git = "https://github.com/EnflameTechnology/UHHI.git", version = "0.1.0", optional = true, rev = "0980208" }

float_eq = { version = "0.7.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ug = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
criterion = { workspace = true }

[features]
gcu = ["ubridge", "uhal", "cust_core", "ubridge/graph"]
scorpio = ["ubridge", "uhal", "cust_core", "ubridge/scorpio"]
cuda = ["cudarc", "dep:candle-kernels"]
cudnn = ["cuda", "cudarc/cudnn"]
graph = ["ubridge/graph"]
aten = ["ubridge/aten"]
mkl = ["dep:libc", "dep:intel-mkl-src"]
accelerate = ["dep:libc", "dep:accelerate-src"]
metal = ["dep:metal", "dep:candle-metal-kernels", "dep:ug-metal"]
async = []
eccl = ["ubridge/eccl", "uhal", "cust_core", "ubridge/scorpio"]
nccl = ["cudarc/nccl", "dep:candle-kernels"]

[[bench]]
name = "bench_main"
harness = false

[[example]]
name = "metal_basics"
required-features = ["metal"]
