[package]
name = "candle-kernels"
version = "0.8.3"
edition = "2021"

description = "CUDA kernels for Candle"
repository = "https://github.com/huggingface/candle"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[dependencies]

[build-dependencies]
cudaforge = { git = "https://github.com/guoqingbao/cudaforge.git", version= "0.1.0", rev = "5940f46"}